2014-03-25  Niibe Yutaka  <gniibe@fsij.org>

	* misc/t-eddsa.c: New.

	* src/ecc-edwards.c (bnX_mul_C, mod_reduce_M): New.
	(eddsa_25519): New.

2014-03-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (ed_add_25638): Fix for X == A.
	(main): Compute pre-computed tables.
	(precomputed_KG, precomputed_2E_KG): Add.
	(compute_kG_25519): New.

2014-03-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/bn.c (bn256_add): Fix for X == B.
	(bn256_sub): Likewise.

	* src/ecc-edwards.c: New.

2014-03-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/mod25638.c (mod25638_add, mod25638_sub, mod25638_sqr)
	(mod25638_shift): New.

2014-03-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/mod25638.c: Rename from fe25519.c.
	* src/mod25638.h: Likewise.

2014-03-07  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.2.

2014-02-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_public_key): Don't put OID.

	* src/configure [certdo] (gnuk.ld): Add TIM_SIZE and EXT_SIZE.
	Thanks to Vasily Evseenko for the bug report.

2014-02-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc.c (compute_kG): Compute higer index at first.
	(point_is_on_the_curve): Don't use coefficient_a if it's zero.

	* src/jpc.c (jpc_double): Care coefficient A.

	* src/ec_p256r1.c (COEFFICIENT_A_IS_MINUS_3): New.
	* src/ec_p256k1.c (COEFFICIENT_A_IS_ZERO): New.
	* src/jpc_p256r1.c (COEFFICIENT_A_IS_MINUS_3): Likewise.
	* src/jpc_p256k1.c (COEFFICIENT_A_IS_MINUS_3): Likewise.

	* src/modp256k1.c (modp256k1_shift): Bug fix.

2014-02-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (CSRC): Add files of p256k1.

	* src/openpgp.c (cmd_pso): Support p256k1 for signature.

	* src/openpgp-do.c (algorithm_attr_p256k1): New.
	(gpg_do_write_prvkey): Support p256k1 for signature.
	(proc_key_import, gpg_do_table, gpg_do_public_key): Likewise.

	* src/Makefile.in (DEFS): Add -DRSA_SIG.

	* src/openpgp-do.c (gpg_do_write_prvkey): Use _p256r1.
	* src/openpgp.c (cmd_internal_authenticate): Likewise.
